--- a/FrontEnd/projects/sfm/src/app/Common/Components/login/login.component.html
+++ b/FrontEnd/projects/sfm/src/app/Common/Components/login/login.component.html
@@ -13,25 +13,25 @@
                 <form role="form text-left">
                   <label>Email</label>
                   <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                    <input type="email" class="form-control" placeholder="username" aria-label="Email" aria-describedby="email-addon"  #user>
                   </div>
                   <label>Password</label>
                   <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
+                    <input type="email" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon"  #pass>
                   </div>
                   <!-- <div class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
                     <label class="form-check-label" for="rememberMe">Remember me</label>
                   </div> -->
                   <div class="text-center">
-                    <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
+                    <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0" (click)="doLogin(user.value,pass.value)">Sign in</button>
                   </div>
                 </form>
               </div>
               <div class="card-footer text-center pt-0 px-lg-2 px-1">
                 <p class="mb-4 text-sm mx-auto">
                   Don't have an account?
-                  <a href="javascript:;" class="text-info text-gradient font-weight-bold">Sign up</a>
+                  <a href="javascript:;" class="text-info text-gradient font-weight-bold" >Sign up</a>
                 </p>
               </div>
             </div>
