--- a/FrontEnd/projects/sfm/src/app/Admin/Components/complain-reports/complain-reports.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/complain-reports/complain-reports.component.html
@@ -1,1 +1,56 @@
-<p>complain-reports works!</p>
+<div class="container-fluid py-4">
+    <div class="card">
+        <div class="card-body">
+            Compaint Report
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <table class="table table-responsive">
+                <thead>
+                    <th>S No</th>
+                    <th>Complaint Message</th>
+                    <th>Customer Name</th>
+                    <th>Vendor Names</th>
+                    <th>Date</th>
+                    <th>Work Assigned</th>
+                    <th>Work Completed</th>
+                    <th>View</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Pipe is Not Working</td>
+                        <td>Lokesh</td>
+                        <td>A,B,C</td>
+                        <td>12/05/2021</td>
+                        <td>Change the Damage Pipe</td>
+                        <td>Removed the pipe</td>
+                        <td><button class="btn btn-success">View</button></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Pipe is Not Working</td>
+                        <td>Lokesh</td>
+                        <td>A,B,C</td>
+                        <td>13/05/2021</td>
+                        <td>Change the Damage Pipe</td>
+                        <td>Changed the pipe</td>
+                        <td><button class="btn btn-success">View</button></td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Pipe is Not Working</td>
+                        <td>Lokesh</td>
+                        <td>A,B,C</td>
+                        <td>14/05/2021</td>
+                        <td>Put Some White cement</td>
+                        <td>Completed the Work</td>
+                        <td><button class="btn btn-success">View</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
