--- a/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
@@ -25,7 +25,7 @@
                     <th>View</th>   
                 </thead>
                 <tbody style="text-align: center;">
-                    <tr *ngFor="let c of customer;let i=index">
+                    <tr *ngFor="let c of customer |paginate: { itemsPerPage: 5, currentPage:p  };let i=index ">
                         <td>{{i + 1}}</td>
                         <td>{{c.firstname}} {{c.lastname}}</td>
                         <td>{{c.email}}</td>
@@ -39,6 +39,18 @@
                     </tr>                    
                 </tbody>               
             </table>
+              <br>
+    <br>
+<div class ="pagination">
+    <pagination-controls (pageChange)="p=$event" class="float-right"></pagination-controls>
+
+
+    <style>
+        .pagination  .ngx-pagination .current {
+          background: #ff6700;
+        }
+      </style>
+</div>
         </div>
     </div>   
     
